<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_import"
                android:icon="@drawable/ic_menu_import"
                android:title="@string/download"/>
        <item
                android:id="@+id/nav_export"
                android:icon="@drawable/ic_menu_export"
                android:title="@string/upload"/>
        <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_login"
                android:title="@string/login"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout"/>
    </group>

    <item android:title="@string/onedrive_support">
        <menu>

            <item
                    android:id="@+id/nav_import_2"
                    android:icon="@drawable/ic_file_download"
                    android:title="@string/import_"/>
            <item
                    android:id="@+id/nav_export_2"
                    android:icon="@drawable/ic_file_upload"
                    android:title="@string/export_"/>
        </menu>
    </item>

</menu>
