<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
>
    <LinearLayout
            android:id="@+id/weekLine"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:background="#00000000"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
    >

        <TextView
                style="@style/TextView_weekday"
                android:id="@+id/blank"
                android:layout_weight="1"/>
        <TextView
                style="@style/TextView_weekday"
                android:id="@+id/mon"
                android:text="Mon"
        />
        <TextView
                style="@style/TextView_weekday"
                android:id="@+id/tue"
                android:text="Tue"/>
        <TextView
                style="@style/TextView_weekday"
                android:id="@+id/wed"
                android:text="Wed"/>
        <TextView
                style="@style/TextView_weekday"
                android:id="@+id/thu"
                android:text="Thu"/>
        <TextView
                style="@style/TextView_weekday"
                android:id="@+id/fri"
                android:text="Fri"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/bodyLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#00000000"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/weekLine"
    >
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#00000000"
                android:layout_weight="1"

        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/TextView1"
                    android:layout_weight="1"
                    android:text="@string/class1"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:textColor="#FF000000"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/TextView2"
                    android:text="@string/class2"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:textColor="#FF000000"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/TextView3"
                    android:text="@string/class3"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:textColor="#FF000000"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/TextView4"
                    android:text="@string/class4"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:textColor="#FF000000"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/TextView5"
                    android:text="@string/class5"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:textColor="#FF000000"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#00000000"
                android:layout_weight="1"

        >
            <TextView
                    android:id="@+id/TextView11"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView12"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView13"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView14"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView15"
                    style="@style/TextView_grid"
            />

        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#00000000"
                android:layout_weight="1"

        >
            <TextView
                    android:id="@+id/TextView21"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView22"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView23"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView24"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView25"
                    style="@style/TextView_grid"
            />

        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#00000000"
                android:layout_weight="1"

        >
            <TextView
                    android:id="@+id/TextView31"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView32"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView33"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView34"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView35"
                    style="@style/TextView_grid"
            />

        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#00000000"
                android:layout_weight="1"

        >
            <TextView
                    android:id="@+id/TextView41"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView42"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView43"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView44"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView45"
                    style="@style/TextView_grid"
            />

        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#00000000"
                android:layout_weight="1"

        >
            <TextView
                    android:id="@+id/TextView51"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView52"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView53"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView54"
                    style="@style/TextView_grid"
            />
            <TextView
                    android:id="@+id/TextView55"
                    style="@style/TextView_grid"
            />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>